# Volumetric-Effects-GPU

./: CMakeLists.txt  README.md  README.txt
data/models/crysponza/: sponza.mtl
data/models/crysponza/textures/jpeg/: Thumbs.db
vfxDemo/: CMakeLists.txt  LICENCE.txt
vfxDemo/include/: DemoBase.h  Gui.h  Mesh.h  SmokeDemo.h  SponzaDemo.h  Texture.h  imgui.h  imgui_internal.h
vfxDemo/src/: DemoBase.cpp  Gui.cpp  Mesh.cpp  SmokeDemo.cpp  SponzaDemo.cpp  Texture.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  main.cpp
vfxEngine/: CMakeLists.txt
vfxEngine/include/: ICamera.h  INonCopy.h  Singleton.h  vfxEngine.h
vfxEngine/include/core/: ApplicationBase.h  Channel.h  Engine.h  EngineEvents.h  Event.h  InputEvents.h  WindowEvents.h
vfxEngine/include/graphics/: Camera.h  OGL.h  Pipeline.h  Quad.h  Renderable.h  RenderableIndexed.h  Shader.h
vfxEngine/include/logger/: Logger.h
vfxEngine/include/scene/: Transform.h
vfxEngine/include/systems/: ISystem.h  Input.h  Renderer.h  Time.h  Window.h
vfxEngine/include/utils/: FileUtils.h
vfxEngine/src/core/: ApplicationBase.cpp  Engine.cpp
vfxEngine/src/graphics/: Camera.cpp  Pipeline.cpp  Renderable.cpp  RenderableIndexed.cpp  Shader.cpp
vfxEngine/src/logger/: Logger.cpp
vfxEngine/src/systems/: Input.cpp  Renderer.cpp  Time.cpp  Window.cpp
vfxEngine/src/utils/: FileUtils.cpp
vfxFluid/: CMakeLists.txt
vfxFluid/include/: Cube.h  DensityInjection.h  Fluid.h  FluidRenderer.h  IAdvection.h  IInjection.h  Image3D.h  MacCormack.h  NoObstacle.h  Parameter.h  Profiler.h  Quantity.h  RendererProperties.h  SemiLagrangian.h  SimProperties.h  TempInjection.h  VelocityInjection.h  obstacle.h  sphere.h
vfxFluid/resources/: config.json
vfxFluid/resources/shaders/: advect_1d.comp  advect_4d.comp  blur.comp  confinement.comp  divergence.comp  gaussian_blur_1d.comp  injectionVelocity.comp  injection_4d.comp  quad.vert  raytracing.frag  shadows.comp  simple.frag
vfxFluid/resources/shaderss/: advect_mc_1d.comp  advect_mc_4d.comp  boundary.comp  box.comp  buoyancy.comp  buoyancy_4d.comp  clear.comp  clear_1d.comp  confinement_4d.comp  divergence_1d.comp  gaussian_blur_4d.comp  injection_1d.comp  injection_splat_1d.comp  injection_splat_4d.comp  injection_splat_v.comp  injection_splat_v_linear.comp  jacobi.comp  jacobi_1d.comp  projection.comp  projection_4d.comp  raytracing.frag  shadow_1d.comp  shadows.comp  simple.vert  sphere.comp  vorticity.comp  vorticity_4d.comp
vfxFluid/src/: Cube.cpp  DensityInjection.cpp  Fluid.cpp  FluidRenderer.cpp  Image3D.cpp  MacCormack.cpp  NoObstacle.cpp  Obstacle.cpp  Profiler.cpp  Quantity.cpp  SemiLagrangian.cpp  TempInjection.cpp  VelocityInjection.cpp  sphere.cpp
